<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.tum.bgu.msm.mito</groupId>
        <artifactId>useCases</artifactId>
        <version>master-SNAPSHOT</version>
    </parent>

    <artifactId>melbourne</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>de.tum.bgu.msm.mito</groupId>
            <artifactId>mitoCore</artifactId>
            <version>master-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.tum.bgu.msm.mito</groupId>
            <artifactId>mito7days</artifactId>
            <version>master-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.tum.bgu.msm.mito</groupId>
            <artifactId>activeRouting</artifactId>
            <version>master-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>